--- a/content.css
+++ b/content.css
@@ -102,7 +102,7 @@ body{/*bodyColor*/color:#333333;/*fontSize*/font-size:100%;}
 a{/*aColor*/color:#2495ff;}
 #header,#emptyHeader,#nodeDecoration{height:auto!important;/*headerHeight*/height:200px;min-height:200px;/*headerBGURL*/background-image:url(T%C3%ADtulo.png);/*headerBGRepeat*/background-repeat:no-repeat;/*headerBGPosition*/background-position:50% 50%;}
 #headerContent{/*hideProjectTitle*/position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px);}
-#siteFooter{border:1px solid /*footerBorderColor*/#dddddd;/*footerColor*/color:#ffffff;/*footerTextAlign*/text-align:center;/*footerFontSize*/font-size:70%;}
+#siteFooter{border:1px solid /*footerBorderColor*/#dddddd;/*footerColor*/color:#000000;/*footerTextAlign*/text-align:center;/*footerFontSize*/font-size:70%;}
 #siteFooter a{/*footerAColor*/color:#ffaaaa;}
 /* eXeLearning Style Designer (custom CSS) */
 
